Updated UI for Surveysage

--- a/surveysage/src/app/surveyform/surveyform.component.html
+++ b/surveysage/src/app/surveyform/surveyform.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel" style="color:white; background-color:#337ab7">
+    <div class="panel" style="color:white; background-color:#a7dbd8, #f0f4ff">
       <h3>  Questions for Survey#{{surveyId}}.</h3>
       <div>
         <a style="color:#ffffff" href="#"><span class="glyphicon glyphicon-edit"></span></a>
