--- a/surveysage/src/app/welcomepage/welcomepage.component.html
+++ b/surveysage/src/app/welcomepage/welcomepage.component.html
@@ -1,2 +1,10 @@
-<p style="text-align: center;">WELCOME TO SURVEY SAGE!</p>
-<div style="text-align: center;"><a [routerLink]="['/surveylist']" class="btn btn-lg btn-primary" role="button">View All Survey</a></div>
+<div class="jb-body">
+    <div class="jumbotron">
+        <h1>Welcome to Survey Sage!</h1>
+        <p>Your one-stop solution for managing surveys efficiently and effectively.</p>
+        <p>Streamline your data collection process with modern tools and analytics.</p>
+        <p>
+            <a [routerLink]="['/surveylist']" class="btn-primary" role="button">View All Surveys</a>
+        </p>
+    </div>
+</div>
