--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -65,6 +65,14 @@
         <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
       </ng-container>
 
+      <!-- Responses -->
+      <ng-container matColumnDef="responses">
+        <th mat-header-cell *matHeaderCellDef>Responses</th>
+        <td mat-cell *matCellDef="let element">
+          {{responses[element.surveyId]}}
+        </td>
+      </ng-container>
+
       <!-- Header and Rows -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
