--- a/surveysage/src/app/surveyform/surveyform.component.html
+++ b/surveysage/src/app/surveyform/surveyform.component.html
@@ -16,7 +16,7 @@
         <tr>
           <th>Questions</th>
           <th>Question Type</th>
-          <th width="10%">Question Choice</th> <!-- Changed from "Payload" to "Question Choice" -->
+          <th width="10%">Question Choice</th>
           <th width="10%">isRequired?</th>
         </tr>
       </thead>
@@ -25,7 +25,6 @@
           <td>{{i + 1}}. {{result.text}}</td>
           <td>{{result.type}}</td>
           <td>
-            <!-- Changed "No Payload" to "Text Response" -->
             <span *ngIf="result.payload?.length > 0">
               {{ result.payload.join(', ') }}
             </span>
