--- a/surveysage/src/app/welcomepage/welcomepage.component.html
+++ b/surveysage/src/app/welcomepage/welcomepage.component.html
@@ -1,10 +1,11 @@
 <div class="jb-body">
     <div class="jumbotron">
         <h1>Welcome to Survey Sage!</h1>
-        <p>Your one-stop solution for managing surveys efficiently and effectively.</p>
+        <p id="welcomepage-p-1">Your one-stop solution for managing surveys efficiently and effectively.</p>
         <p>Streamline your data collection process with modern tools and analytics.</p>
         <p>
             <a [routerLink]="['/surveylist']" class="btn-primary" role="button">View All Surveys</a>
+            <a [routerLink]="['/createsurvey']" class="btn-secondary" role="button">Create Survey</a>
         </p>
     </div>
 </div>
