--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -25,17 +25,14 @@
           </button>
       </mat-toolbar>
 
-      <!-- Main Content -->
-      <h3 class="section-heading">Active Surveys</h3>
-
       <!-- Table -->
       <div class="panel panel-default">
           <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 survey-table">
               <!-- Name Column -->
               <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                  <td mat-cell *matCellDef="let element; let i = index">
-                      <a [routerLink]="['/survey', i + 1]" class="survey-link">{{ element.name }}</a>
+                  <td mat-cell *matCellDef="let element;">
+                      <a [routerLink]="['/survey', element.surveyId]" class="survey-link">{{ element.name }}</a>
                   </td>
               </ng-container>
 
