--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -1,85 +1,191 @@
 <div class="jb-body">
   <div class="container">
-      <!-- Toolbar -->
-      <mat-toolbar color="primary" class="toolbar">
-          <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>menu</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-              <button mat-menu-item>
-                  <mat-icon>home</mat-icon>
-                  <span>Home</span>
-              </button>
-              <button mat-menu-item>
-                  <mat-icon>list</mat-icon>
-                  <span>My Surveys</span>
-              </button>
-          </mat-menu>
-          <span class="toolbar-title">Survey List</span>
-          <span class="spacer"></span>
-          <button mat-icon-button aria-label="Share">
-              <mat-icon>share</mat-icon>
-          </button>
-          <button mat-icon-button aria-label="Help">
-              <mat-icon>help</mat-icon>
-          </button>
-      </mat-toolbar>
+    <!-- Toolbar -->
+    <mat-toolbar color="primary" class="toolbar">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>home</mat-icon>
+          <span>Home</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>list</mat-icon>
+          <span>My Surveys</span>
+        </button>
+      </mat-menu>
+      <span class="toolbar-title">Survey List</span>
+      <span class="spacer"></span>
+      <button mat-icon-button aria-label="Share">
+        <mat-icon>share</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Help">
+        <mat-icon>help</mat-icon>
+      </button>
+    </mat-toolbar>
 
-      <!-- Table -->
-      <div class="panel panel-default">
-          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 survey-table">
+    <!-- Table -->
+    <div class="panel panel-default">
+      <mat-tab-group>
+        <mat-tab label="Draft">
+          <ng-template matTabContent>
+            <table
+              mat-table
+              [dataSource]="draftSurveys"
+              matSort
+              class="mat-elevation-z8 survey-table"
+            >
               <!-- Name Column -->
               <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                  <td mat-cell *matCellDef="let element;">
-                      <a [routerLink]="['/survey', element.surveyId]" class="survey-link">{{ element.name }}</a>
-                  </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                  <a
+                    [routerLink]="['/survey', element.surveyId]"
+                    class="survey-link"
+                    >{{ element.name }}</a
+                  >
+                </td>
               </ng-container>
 
               <!-- Description Column -->
               <ng-container matColumnDef="description">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-                  <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-              </ng-container>
-
-              <!-- Status Column -->
-              <ng-container matColumnDef="status">
-                  <th mat-header-cell *matHeaderCellDef>Status</th>
-                  <td mat-cell *matCellDef="let element">
-                      <span
-                          [ngClass]="{
-                              'status-active': element.status === 'Active',
-                              'status-inactive': element.status !== 'Active'
-                          }"
-                      >
-                          {{ element.status }}
-                      </span>
-                  </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Description
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.description }}
+                </td>
               </ng-container>
 
               <!-- Owner Column -->
               <ng-container matColumnDef="owner">
-                  <th mat-header-cell *matHeaderCellDef>Owner</th>
-                  <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
+                <th mat-header-cell *matHeaderCellDef>Owner</th>
+                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
               </ng-container>
 
               <!-- Responses -->
               <ng-container matColumnDef="responses">
-                  <th mat-header-cell *matHeaderCellDef>Responses</th>
-                  <td mat-cell *matCellDef="let element">
-                      {{responses[element.surveyId]}}
-                  </td>
+                <th mat-header-cell *matHeaderCellDef>Responses</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ responses[element.surveyId] ?? "n/a" }}
+                </td>
               </ng-container>
 
               <!-- Header and Rows -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-      </div>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+        <mat-tab label="Published">
+          <ng-template matTabContent>
+            <table
+              mat-table
+              [dataSource]="publishedSurveys"
+              matSort
+              class="mat-elevation-z8 survey-table"
+            >
+              <!-- Name Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                  <a
+                    [routerLink]="['/survey', element.surveyId]"
+                    class="survey-link"
+                    >{{ element.name }}</a
+                  >
+                </td>
+              </ng-container>
 
-      <!-- Back Button -->
-      <div class="actions">
-          <button mat-raised-button color="primary" (click)="clickEvent()">Back</button>
-      </div>
+              <!-- Description Column -->
+              <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Description
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.description }}
+                </td>
+              </ng-container>
+
+              <!-- Owner Column -->
+              <ng-container matColumnDef="owner">
+                <th mat-header-cell *matHeaderCellDef>Owner</th>
+                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
+              </ng-container>
+
+              <!-- Responses -->
+              <ng-container matColumnDef="responses">
+                <th mat-header-cell *matHeaderCellDef>Responses</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ responses[element.surveyId] }}
+                </td>
+              </ng-container>
+
+              <!-- Header and Rows -->
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+        <mat-tab label="Ended">
+          <ng-template matTabContent>
+            <table
+              mat-table
+              [dataSource]="endedSurveys"
+              matSort
+              class="mat-elevation-z8 survey-table"
+            >
+              <!-- Name Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                  <a
+                    [routerLink]="['/survey', element.surveyId]"
+                    class="survey-link"
+                    >{{ element.name }}</a
+                  >
+                </td>
+              </ng-container>
+
+              <!-- Description Column -->
+              <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Description
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.description }}
+                </td>
+              </ng-container>
+
+              <!-- Owner Column -->
+              <ng-container matColumnDef="owner">
+                <th mat-header-cell *matHeaderCellDef>Owner</th>
+                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
+              </ng-container>
+
+              <!-- Responses -->
+              <ng-container matColumnDef="responses">
+                <th mat-header-cell *matHeaderCellDef>Responses</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ responses[element.surveyId] }}
+                </td>
+              </ng-container>
+
+              <!-- Header and Rows -->
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+
+    <!-- Back Button -->
+    <div class="actions">
+      <button mat-raised-button color="primary" (click)="clickEvent()">
+        Back
+      </button>
+    </div>
   </div>
 </div>
