--- a/surveysage/src/app/respondent/respondent.component.html
+++ b/surveysage/src/app/respondent/respondent.component.html
@@ -1,3 +1,4 @@
+
 <div *ngIf="loading" class="loading">
     <p>Loading survey...</p>
   </div>
@@ -6,7 +7,7 @@
     <p>{{ errorMessage }}</p>
   </div>
   
-  <div *ngIf="!loading && survey && survey.status === 'active'">
+  <div *ngIf="!loading && survey && survey.status === 'published'">
     <h1>{{ survey.name }}</h1>
     <p>{{ survey.description }}</p>
     <form [formGroup]="responseForm" (ngSubmit)="submitResponses()">
